--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-       <h1> <img src="pexels-christina-morillo-1181675.jpg"  alt="Logo" class="box" width="40" height="40"> TPN </h1>
+       <h1 class="box"> <img src="pexels-christina-morillo-1181675.jpg"  alt="Logo"  width="40" height="40"> TPN </h1>
         
         <nav class="cox">
             <ul>
@@ -40,8 +40,8 @@
                 <p>Looking to finally break into the world of 'TECH' and dont know how? Don't worry, we've got you covered!!  At Techpreneur we have everything you need to get started on this exciting journey!! </p>
               <span>  
                 <p>Login in with social media</p>
-                <a href="#"><i class="fa fa-facebook" aria-hidden="true">Login with FB</a>
-                <a href="#"><i class="fa fa-twitter" aria-hidden="true"> Login with Twitter</a>
+                <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
             </span>
             </div>
 
