--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link href="https:fonts.googleapis.com/css?family=open+Sans" ref="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVIGOfQNHSoD2xbE+QkPxCAFINEevoEH3SI0sibVcOQVnN" crossorigin="anonymous"> <link rel="stylesheet" href="./style.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"><link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
     <header>
-       <h1 class="box"> <img src="pexels-christina-morillo-1181675.jpg"  alt="Logo"  width="40" height="40"> TPN </h1>
+       <h1 class="box"> <img src="pexels-christina-morillo-1181675.jpg"  alt="Logo"  width="40" height="40"> KBM Labs</h1>
         
         <nav class="cox">
             <ul>
@@ -40,8 +40,8 @@
                 <p>Looking to finally break into the world of 'TECH' and dont know how? Don't worry, we've got you covered!!  At Techpreneur we have everything you need to get started on this exciting journey!! </p>
               <span>  
                 <p>Login in with social media</p>
-                <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                <a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                <a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a>
             </span>
             </div>
 
@@ -66,6 +66,32 @@
 </div>
 <br>
 <button>Login</button>
+</div>
+</div>
+
+
+<div class="tall">
+<div class="short">
+    <a href=""><i class="fa fa-facebook"></i></a>
+    <a href=""><i class="fa fa-twitter"></i></a>
+    <a href=""><i class="fa fa-youtube"></i></a>
+
+</div>
+
+<div class="long">
+    <ul>
+        <li>
+            <a href="#">Terms of Service</a>
+        </li>
+        <li>
+            <a href="#">Privacy</a>
+        </li>
+    </ul>
+    <div class="small">
+        <p> &copy; KBM Labs 2023</p>
+
+    </div>
+
 </div>
 </div>
     
